Various changes to allow app to work in AWS
