# server/src/main/java/com/nwj/cvviewer/conversion/CvConversionService.java
@@ -2,6 +2,7 @@ package com.nwj.cvviewer.conversion;
 
 import com.nwj.cvviewer.data.entity.CvData;
 import com.nwj.cvviewer.model.Cv;
+import com.nwj.cvviewer.model.CvSummary;
 
 import java.util.List;
 
@@ -9,7 +10,9 @@ public interface CvConversionService {
 
     Cv convert(CvData cvData);
 
-    List<Cv> convert(List<CvData> cvDataList);
+    CvSummary convertSummary(CvData cvData);
+
+    List<CvSummary> convert(List<CvData> cvDataList);
 
     void updateReferences(CvData cvData);
 
