# server/src/main/java/com/nwj/cvviewer/security/CustomWebSecurityConfigurerAdapter.java
@@ -35,14 +35,16 @@ public class CustomWebSecurityConfigurerAdapter extends WebSecurityConfigurerAda
             .csrf().disable()
             .authorizeRequests()
             .antMatchers(HttpMethod.GET, "/cv/getAll", "/cv/findByName/").permitAll()
-            .antMatchers(HttpMethod.PUT, "/cv").authenticated()
+            .antMatchers(HttpMethod.POST, "/cv").authenticated()
             .antMatchers(HttpMethod.POST, "/cv/login/*").authenticated()
             .antMatchers( "/cvs/*").permitAll()
             .antMatchers("/**").anonymous()
             .anyRequest().authenticated()
-            .and()
+        .and()
             .httpBasic()
-            .authenticationEntryPoint(authenticationEntryPoint);
+            .authenticationEntryPoint(authenticationEntryPoint)
+        .and()
+            .cors();
     }
 
     @Bean
